cabal-version:      2.4
name:               usim
version:            0.1.0.0
author:             Leon Schumacher
maintainer:         leonsch@protonmail.com
executable usim
    main-is:          Main.hs
    other-modules:    Universe, Utils
    other-extensions:
    build-depends: base ^>=4.14.3.0, containers, sdl2, sdl2-ttf, text, linear
    hs-source-dirs:   app
    default-language: Haskell2010
